@@ -1,3 +1,4 @@
+* BUG#8368 Gestion de différentes sections du document opendocument dans l'assistant de conversion des courriers
 * BUG#8192 Ajout de configuration pour attribuer les droits ACL sur le répertoire de sortie des courriers
 * OTH#0000 Possibilité de forcer le modèle de recherche dans search_and_stream
 * FEA#8137 Ajout d'un batch permettant de créer en masse des demandes de production de documents
