@@ -1,3 +1,4 @@
+* BUG#8368 Handle different sections of the opendocument file in template conversion wizard
 * BUG#8192 Add configuration to set ACL rights on the report output folder
 * OTH#0000 Allow to specify the model to search_and_stream on
 * FEA#8137 Add a batch to create report production requests on a lot of records in one go
